src/test/ui/fuckit/borrowck-live-code.stderr
error: lifetime may not live long enough
  --> $DIR/borrowck-live-code.rs:4:5
   |
LL | fn live_code(s: &str) -> &'static str {
   |                 - let's call the lifetime of this reference `'1`
LL |     s
   |     ^ returning this value requires that `'1` must outlive `'static`

error: aborting due to previous error

